<resources>
    <string name="app_name">Shiva Ladies Tailor</string>

    <string name="main_fragment_title">Shiva Ladies Tailor</string>
    <string name="services_fragment_title">Services</string>
    <string name="settings_toolbar_title">Settings</string>

    <!--  LoginFragment  -->
    <string name="welcome_label">Welcome !</string>
    <string name="login_status">
        You are currently not logged in. Please login from below to continue.
    </string>

    <!--  Detail Fragment text labels  -->
    <string name="label_customer">Customer</string>
    <string name="label_status">Status</string>

    <string name="status_pending">Pending</string>
    <string name="status_completed">Completed</string>

    <string name="preference_summary_user_account">Check your sign in account</string>
    <string name="preference_summary_logout_user">Logout from the app</string>
    <string name="preference_summary_about_app">What is this app about</string>
    <string name="preference_title_user_account">Account</string>
    <string name="preference_title_logout_user">Logout</string>
    <string name="preference_title_about_app">About</string>

    <string name="login">Login</string>
    <string name="bill_number_hint">0001</string>
    <string name="submit_bill_number_button_text">Submit</string>
    <string name="field_required_error_text">Filed required</string>

    <string name="customer_not_found_error_title_text">Customer Not Found</string>
    <string name="customer_not_found_error_subtitle_text">
        Please enter your bill number to get customer details.
    </string>
    <string name="customer_not_found_positive_button">Enter Bill Number</string>
    <string name="customer_not_found_error_message_text">
        You have entered wrong bill number, make sure the number is correct.
    </string>
    <string name="customer_dialog_positive_button">Retry</string>
    <string name="enter_bill_number_label">Enter 4 digit bill number.</string>
    <string name="bill_number_fragment_title">Bill Number</string>
    <string name="detail_num_items_text_label">Total items</string>
    <string name="detail_date_started_on_label">Started On</string>
    <string name="detail_date_expected_label">Expected</string>
    <string name="dashboard_item_search_bill_number">Search bill number</string>
    <string name="dashboard_item_contact_shop">Contact shop</string>
    <string name="dashboard_item_services">Services</string>

    <!--  ContactFragment  -->
    <string name="address">
        Shop No. 39, First Floor \nAbdullah Khan Estate \nKurnool, Andhra Pradesh \n518001.</string>
    <string name="open_time">Opens at 10:30 am. \nCloses at 9:30 pm. \nSundays closed.</string>
    <string name="contact_label">shivastitchwear@gmail.com</string>
    <string name="services_alterations">Alterations</string>
    <string name="services_blouses">Blouses</string>
    <string name="services_dresses">Dresses</string>
    <string name="services_uniform">Uniforms</string>
    <string name="services_wedding">Weddings</string>
    <string name="services_women_clothing">Women\'s Clothing</string>

    <!--  IntroFragment ViewPager clickable text's  -->
    <string name="skip_intro_pager_text">Skip</string>
    <string name="next_intro_pager_text">Next</string>
    <string name="end_intro_pager_text">Finish</string>
    <!--  Key and Values for SharedPreferences used in IntroFragment whether to shown or hide  -->
    <string name="preference_intro_result_key">Find Result Fragment</string>
    <string name="preference_intro_status_key">Intro fragment Status</string>
    <string name="preference_intro_fragment_shown_value">Intro Fragment Shown</string>
    <string name="preference_intro_fragment_not_shown_value">Intro Fragment Not Shown</string>
    <!--  IntroFragment ViewPager Title's  -->
    <string name="intro_pager_first_title_text">DevelopersBreach</string>
    <string name="intro_pager_second_title_text">Dynamic Feed</string>
    <string name="intro_pager_third_title_text">Content Update</string>
    <!--  IntroFragment ViewPager Subtitle's  -->
    <string name="intro_pager_first_subtitle_text">Welcome !</string>
    <string name="intro_pager_second_subtitle_text">Updates feed regularly from cloud.</string>
    <string name="intro_pager_third_subtitle_text">Receive notifications for new articles, Manage
        and bookmark feed.</string>
    <string name="refresh">Refresh</string>

    <string name="sign_up">Register</string>
    <string name="submit">Submit</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="invalid_mail_error_text">Invalid email address</string>
    <string name="field_length_error_text">Username needs atleast 3 characters</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="hint_enter_otp">Enter OTP</string>
    <string name="otp_sent_verify_description">Please enter the verification OTP that we have sent to your mobile number.</string>
    <string name="verify_otp">Verify</string>
    <string name="user_verification_successful">Verification Successful</string>
    <string name="bottom_bar_title">Explore</string>

    <string name="list_item_search_bill_number">Search Bill Number</string>
    <string name="list_item_services">Services</string>
    <string name="list_item_contact">Contact</string>
    <string name="list_item_about">About</string>
    <string name="list_item_achievements">Achievements</string>
    <string name="logout_user">Logout</string>
    <string name="achievements_label">Achievements</string>
    <string name="tab_name_levels">Levels</string>
    <string name="tab_name_badges">Badges</string>
    <string name="hint_bill_number">Bill number</string>
    <string name="delivery_date_label">Delivery date</string>
    <string name="tools_text_date">Dec 24, 2020</string>

    <!--  Firestore Response Message  -->
    <string name="customer_firestore_unsuccessful">UnSuccessful</string>
    <string name="dialog_positive_button_ok">OK</string>
    <string name="dialog_positive_message_text">Customer added successfully</string>
    <string name="dialog_error_title_text">Error</string>

    <!--  Dialog titles and messages  -->
    <string name="dialog_error_message_text">Internet connection not available</string>
    <string name="dialog_negative_button_cancel">Cancel</string>
    <string name="dialog_positive_button_delete">Delete</string>
    <string name="dialog_title_search_error">Error</string>

</resources>