<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="android.app.Activity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimarySurface"
        android:padding="16dp"
        android:theme="@style/Shiva.Pink"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcome_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/main_fragment_title"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/welcome_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_title" />

            <TextView
                android:id="@+id/user_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_status"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorOnPrimarySurface"
                app:backgroundTint="?attr/colorPrimarySurface"
                app:layout_constraintBottom_toTopOf="@id/sign_up_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorOnPrimarySurface"
                app:backgroundTint="?attr/colorPrimarySurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/login_shop_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginVertical="16dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_username"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/email_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_shop_logo"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text"
                    style="@style/FirebaseUI.TextInputEditText.NameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/hint_email"
                app:layout_constraintBottom_toTopOf="@id/phone_number_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_input_layout"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    style="@style/FirebaseUI.TextInputEditText.EmailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/hint_phone_number"
                app:layout_constraintBottom_toTopOf="@id/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout"
                app:layout_constraintVertical_chainStyle="packed"
                app:prefixText="+91 ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_edit_text"
                    style="@style/FirebaseUI.TextInputEditText.PhoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:text="@string/fui_title_register_email"
                android:textAllCaps="false"
                android:visibility="invisible"
                tools:visibility="visible"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorOnPrimarySurface"
                app:backgroundTint="?attr/colorPrimarySurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
