<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.developersbreach.clientproject.view.contact.ContactViewModel" />

        <variable
            name="fragment"
            type="com.developersbreach.clientproject.view.contact.ContactFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:background="?attr/colorPrimarySurface"
        tools:showIn="@layout/fragment_contact">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contact_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:bindContactFragmentReference="@{fragment}"
            app:bindContactListData="@{viewModel.imagesData}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_shop" />

        <ImageView
            android:id="@+id/place_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:paddingTop="4dp"
            android:src="@drawable/ic_place"
            app:layout_constraintEnd_toStartOf="@id/address_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_recycler_view"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/place_icon"
            app:layout_constraintTop_toTopOf="@id/place_icon" />

        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:paddingTop="4dp"
            android:src="@drawable/ic_time"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toStartOf="@id/time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_label"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/open_time"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/address_label"
            app:layout_constraintTop_toTopOf="@id/time_icon" />

        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:paddingTop="4dp"
            android:src="@drawable/fui_ic_mail_white_24dp"
            app:layout_constraintEnd_toStartOf="@id/time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_label"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/contact_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/contact_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/address_label"
            app:layout_constraintTop_toTopOf="@id/contact_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>